--- a/cgo/CMakeLists.txt
+++ b/cgo/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.27)
-project(cgo CXX C)
+project(geowrapper CXX C)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_C_STANDARD 17)
